--- a/website/style.css
+++ b/website/style.css
@@ -1,3 +1,8 @@
+* {
+    margin:0;
+    padding: 0;
+}
+
 body{
     background: #fffff8;
     font-family: -apple-system, BlinkMacSystemFont, sans-serif;
@@ -5,25 +10,61 @@ body{
 
 #app{
     display: grid;
-    grid-auto-rows: minmax(150px, auto);
-    /* grid-template-columns:  */
+    grid-auto-rows: minmax(30px, auto);
+    grid-template-columns: 100%;
     height:100vh;
     background: #f23557;
     color: #f0d43a;
     justify-content: center;
     grid-gap: 1em;
-    font-size: 20px;
     font-family: 'Oswald', sans-serif;
 }
 
-.holder{
-
+ .holder{
+    margin: auto; 
+    display: grid;
 }
 
-.entry{
+.feel {
+    display: grid;
+    grid-gap: 5px;
+}
+
+.headline {
+    font-size: 4rem;
+}
+
+label {
+    font-size: 1.7rem;
+    
+}
+
+.zip {
+    grid-template-columns: 48% 48%;
+}
+
+button, textarea, input {
+    font-size: 1.4rem;
+}
+
+button {
+    margin-top: 10px;
+}
+
+
+/* .entry{
     background: rgba(59, 74, 107, .4);
+} */
+
+.entry-item {
+    font-size: 1.5rem;
 }
 
+.title{
+    font-size: 1.7rem;
+} 
+
+/*
 #entryHolder{
 
 }
@@ -43,12 +84,10 @@ body{
 .headline {
 
 }
-.title{
-
-}
+*/
 
 /*  Basic Styling To Override Default For Basic HTML Elements */
-label{
+/* label{
     display:block;
     font-size: 27px;
 }
@@ -73,39 +112,38 @@ button{
     font-family: 'Oswald', sans-serif;
     border: none;
     box-shadow: 2px 4px 5px #444;
-}
-h1{
-    font-size: 36px;
-}
+} */
+/* h1{
+    font-size: 48px;
+} */
 
-textarea{
+/* textarea{
     background:#22b2da;
     color: #f0d43a;
     font-size: 20px;
     font-family: 'Oswald', sans-serif;
-}
-/* Reset style for HTML element on active to have no border*/
-input:focus,
-select:focus,
+} */
+
+/* input:focus,
 textarea:focus,
 button:focus {
     outline: none;
-}
-/* Style for Placeholder Text*/
-::placeholder { /* Firefox, Chrome, Opera */ 
+} */
+
+/* ::placeholder { 
+    color: #f0d43a; 
+    font-family: 'Oswald', sans-serif;
+
+}  */
+  
+/* ::-ms-input-placeholder 
     color: #f0d43a; 
     font-family: 'Oswald', sans-serif;
 
 } 
   
-:-ms-input-placeholder { /* Internet Explorer 10-11 */ 
+::-ms-input-placeholder 
     color: #f0d43a; 
     font-family: 'Oswald', sans-serif;
 
-} 
-  
-::-ms-input-placeholder { /* Microsoft Edge */ 
-    color: #f0d43a; 
-    font-family: 'Oswald', sans-serif;
-
-} 
+}  */
